--- a/index.html
+++ b/index.html
@@ -4,8 +4,32 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Hola mundo</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css"
+    />
   </head>
   <body>
-    <h1>Hola mundo</h1>
+    <nav>
+      <div class="card-panel teal lighten-2">Página de practica DAWEB 23/24</div>
+    </nav>
+    <div class="row">
+      <div class="col s12 m6">
+        <div class="card blue-grey darken-1">
+          <div class="card-content white-text">
+            <span class="card-title">Hola mundo!</span>
+            <p>
+              Esto es una web sencilla de la primera practica de git de despliegue de aplicaciones
+              web
+            </p>
+          </div>
+          <div class="card-action">
+            <a href="https://www.42madrid.com/actualidad/el-primer-hello-world-de-la-historia/"
+              >Historia del primer Hola, mundo!</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
